# quant-meta-team

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: agent-instructions.md
docs/: cli-reference.md  data-localization.md  design.md  dryrun_a_tier.json  execution.md  sync_report_20y.json  sync_report_a_tier.json  sync_report_a_tier_batch1.json  sync_report_a_tier_batch2.json  sync_report_a_tier_batch3.json  tushare-value-ranking.md
quant_data/: __init__.py  cli.py  cli_support.py  logging_setup.py  paths.py  rate_limit.py  registry.py  scheduler.py
quant_portfolio/: __init__.py  data_layer.py  factor_report.md
quant_risk/: __init__.py  backtest.py  data_layer.py  metrics.py
tests/: conftest.py  test_akshare_adapter.py  test_cli.py  test_concurrent_read.py  test_local_fallback.py  test_logging.py  test_portfolio_factor.py  test_rate_limit.py  test_registry.py  test_resume.py  test_resume_full.py  test_risk_backtest.py  test_scheduler.py  test_signals.py  test_store.py  test_strategy_sweep.py  test_sync_driver.py  test_sync_idempotent.py  test_tushare_adapter.py  test_tushare_balancesheet.py  test_tushare_cashflow.py  test_tushare_dividend.py  test_tushare_fina_audit.py  test_tushare_fina_indicator.py  test_tushare_fina_mainbz.py  test_tushare_fund_holdings.py  test_tushare_hsgt_top10.py  test_tushare_income.py  test_tushare_index_classify.py  test_tushare_index_daily.py  test_tushare_index_member.py  test_tushare_index_weight.py  test_tushare_margin_detail.py  test_tushare_moneyflow.py  test_tushare_moneyflow_hsgt.py  (+11 more)
(+98 files in other folders)
